--- a/.gitattributes
+++ b/.gitattributes
@@ -23,6 +23,11 @@
 # Jupyter notebook
 *.ipynb  text eol=lf
 
+
+mapa_estaciones.html linguist-language=Python
+*.html linguist-detectable=false
+*.css linguist-detectable=false
+
 # Note: .db, .p, and .pkl files are associated
 # with the python modules ``pickle``, ``dbm.*``,
 # ``shelve``, ``marshal``, ``anydbm``, & ``bsddb``
